--- a/app-es6-jsx.html
+++ b/app-es6-jsx.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Test with ES6 and JSX</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
@@ -40,9 +42,9 @@
           render() {
             return (
               <div>
-                <h1>
+                <h3>
                   {this.state.location === null ? 'Loading location ...' : 'Your location is :'}
-                </h1>
+                </h3>
                 <Geolocation location={this.state.location} />
               </div>
             );
