--- a/app-es5-jsx.html
+++ b/app-es5-jsx.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Test with ES5 only</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
@@ -23,7 +25,7 @@
           }
         });*/
 
-        // classes es5 style
+        // classes using es5 style
         function Geolocation(props) {
           React.Component.call(this, props);
         }
@@ -52,9 +54,9 @@
           render: function() {
             return (
               <div>
-                <h1>
+                <h3>
                   {this.state.location === null ? 'Loading location ...' : 'Your location is :'}
-                </h1>
+                </h3>
                 <Geolocation location={this.state.location} />
               </div>
             );
